--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-plotly==5.15.0
+streamlit==1.29.0
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
+plotly==5.18.0
 joblib==1.3.2
+typing-extensions==4.8.0
