--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.29.0
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
-plotly==5.18.0
-joblib==1.3.2
-typing-extensions==4.8.0
+streamlit
+pandas
+numpy
+joblib
+scikit-learn
+plotly
